--- a/index.html
+++ b/index.html
@@ -7,47 +7,200 @@
     <title>Green shop</title>
   </head>
   <body>
-    <section class="popular-plants container">
-      <div class="popular-plants__item">
-        <div class="popular-plants__img">
-          <img
-            src="./img/plants-1.png"
-            alt="Summer cactus
-        & succulents"
-          />
+    <div class="container">
+      <section class="popular-plants">
+        <div class="popular-plants__item">
+          <div class="popular-plants__img">
+            <img
+              src="./img/plants-1.png"
+              alt="Summer cactus
+          & succulents"
+            />
+          </div>
+          <div class="popular-plants__content">
+            <h3 class="popular-plants__title">Summer cactus & succulents</h3>
+            <p class="popular-plants__text">
+              We are an online plant shop offering a wide range of cheap and
+              trendy plants
+            </p>
+            <button type="button" class="popular-plants__btn btn">
+              Find More
+              <img src="./img/Arrow-Right-white.svg" alt="" />
+            </button>
+          </div>
         </div>
-        <div class="popular-plants__content">
-          <h3 class="popular-plants__title">Summer cactus & succulents</h3>
-        <p class="popular-plants__text">
-          We are an online plant shop offering a wide range of cheap and trendy
-          plants
-        </p>
-        <button type="button" class="popular-plants__btn btn">
-          Find More
-          <img src="./img/Arrow-Right-white.svg" alt="" />
-        </button>
+        <div class="popular-plants__item">
+          <div class="popular-plants__img">
+            <img
+              src="./img/plants-2.png"
+              alt="Styling Trends
+        & much more"
+            />
+          </div>
+          <div class="popular-plants__content">
+            <h3 class="popular-plants__title">Styling Trends & much more</h3>
+            <p class="popular-plants__text">
+              We are an online plant shop offering a wide range of cheap and
+              trendy plants
+            </p>
+            <button type="button" class="popular-plants__btn btn">
+              Find More
+              <img src="./img/Arrow-Right-white.svg" alt="" />
+            </button>
+          </div>
         </div>
-      </div>
-      <div class="popular-plants__item">
-        <div class="popular-plants__img">
-          <img
-            src="./img/plants-2.png"
-            alt="Styling Trends
-      & much more"
-          />
+      </section>
+      <section class="blog">
+        <div class="blog__header">
+          <h4 class="blog__title">Our Blog Posts</h4>
+          <p class="blog__text">
+            We are an online plant shop offering a wide range of cheap and
+            trendy plants.
+          </p>
         </div>
-        <div class="popular-plants__content">
-        <h3 class="popular-plants__title">Styling Trends & much more</h3>
-        <p class="popular-plants__text">
-          We are an online plant shop offering a wide range of cheap and trendy
-          plants
-        </p>
-        <button type="button" class="popular-plants__btn btn">
-          Find More
-          <img src="./img/Arrow-Right-white.svg" alt="" />
-        </button>
+        <div class="blog__cards">
+          <article class="blog-card">
+            <div class="blog-card__img">
+              <img src="./img/blog-1.jpg" alt="Cactus & Succulent Care Tips" />
+            </div>
+            <div class="blog-card__content">
+              <h4 class="blog-card__sub-title">
+                <span>September 12</span> <span>Read in 6 minutes</span>
+              </h4>
+              <h5 class="blog-card__title">Cactus & Succulent Care Tips</h5>
+              <p class="blog-card__text">
+                Cacti are succulents are easy care plants for any home or patio.
+              </p>
+              <a href="#!" class="blog-card__link">
+                Read More
+                <svg
+                  width="16"
+                  height="16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                    fill="#3D3D3D"
+                  />
+                  <path
+                    d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                    fill="#3D3D3D"
+                  />
+                </svg>
+              </a>
+            </div>
+          </article>
+          <article class="blog-card">
+            <div class="blog-card__img">
+              <img
+                src="./img/blog-2.jpg"
+                alt="Top 10 Succulents for
+              Your Home"
+              />
+            </div>
+            <div class="blog-card__content">
+              <h4 class="blog-card__sub-title">
+                <span>September 13</span> <span>Read in 2 minutes</span>
+              </h4>
+              <h5 class="blog-card__title">Top 10 Succulents for Your Home</h5>
+              <p class="blog-card__text">
+                Best in hanging baskets. Prefers medium to high light.
+              </p>
+              <a href="#!" class="blog-card__link">
+                Read More
+                <svg
+                  width="16"
+                  height="16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                    fill="#3D3D3D"
+                  />
+                  <path
+                    d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                    fill="#3D3D3D"
+                  />
+                </svg>
+              </a>
+            </div>
+          </article>
+          <article class="blog-card">
+            <div class="blog-card__img">
+              <img
+                src="./img/blog-3.jpg"
+                alt="Cacti & Succulent 
+              Care Tips"
+              />
+            </div>
+            <div class="blog-card__content">
+              <h4 class="blog-card__sub-title">
+                <span>September 15</span> <span>Read in 3 minutes</span>
+              </h4>
+              <h5 class="blog-card__title">Cacti & Succulent Care Tips</h5>
+              <p class="blog-card__text">
+                Cacti and succulents thrive in containers and because most are..
+              </p>
+              <a href="#!" class="blog-card__link">
+                Read More
+                <svg
+                  width="16"
+                  height="16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                    fill="#3D3D3D"
+                  />
+                  <path
+                    d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                    fill="#3D3D3D"
+                  />
+                </svg>
+              </a>
+            </div>
+          </article>
+          <article class="blog-card">
+            <div class="blog-card__img">
+              <img
+                src="./img/blog-4.jpg"
+                alt="Best Houseplants 
+              Room by Room"
+              />
+            </div>
+            <div class="blog-card__content">
+              <h4 class="blog-card__sub-title">
+                <span>September 15</span> <span>Read in 2 minutes</span>
+              </h4>
+              <h5 class="blog-card__title">Best Houseplants Room by Room</h5>
+              <p class="blog-card__text">
+                The benefits of houseplants are endless. In addition to..
+              </p>
+              <a href="#!" class="blog-card__link">
+                Read More
+                <svg
+                  width="16"
+                  height="16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                    fill="#3D3D3D"
+                  />
+                  <path
+                    d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                    fill="#3D3D3D"
+                  />
+                </svg>
+              </a>
+            </div>
+          </article>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </body>
 </html>
