--- a/registration.html
+++ b/registration.html
@@ -7,7 +7,7 @@
     <title>Registration</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-wrapper">
       <button type="button" class="btn-close">
         <img src="./img/close-btn-img.svg" alt="close" />
       </button>
