--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
               </a>
             </div>
             <h4 class="footer__title">We accept</h4>
-            <div class="footer__image">
+            <div class="footer__bot-image">
               <img src="./img/banks.jpg" alt="" />
             </div>
           </div>
         </div>
       </div>
+      <p class="copyright">&copy; 2021 GreenShop. All Rights Reserved.</p>
     </footer>
   </body>
 </html>
