--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Green shop</title>
@@ -124,8 +122,348 @@
             <button type="button" class="welcome__btn btn">SHOP NOW</button>
           </div>
         </section>
+        <div class="container">
+          <section class="popular-plants">
+            <div class="popular-plants__item">
+              <div class="popular-plants__img">
+                <img
+                  src="./img/plants-1.png"
+                  alt="Summer cactus
+              & succulents"
+                />
+              </div>
+              <div class="popular-plants__content">
+                <h3 class="popular-plants__title">
+                  Summer cactus & succulents
+                </h3>
+                <p class="popular-plants__text">
+                  We are an online plant shop offering a wide range of cheap and
+                  trendy plants
+                </p>
+                <button type="button" class="popular-plants__btn btn">
+                  Find More
+                  <img src="./img/Arrow-Right-white.svg" alt="" />
+                </button>
+              </div>
+            </div>
+            <div class="popular-plants__item">
+              <div class="popular-plants__img">
+                <img
+                  src="./img/plants-2.png"
+                  alt="Styling Trends
+            & much more"
+                />
+              </div>
+              <div class="popular-plants__content">
+                <h3 class="popular-plants__title">
+                  Styling Trends & much more
+                </h3>
+                <p class="popular-plants__text">
+                  We are an online plant shop offering a wide range of cheap and
+                  trendy plants
+                </p>
+                <button type="button" class="popular-plants__btn btn">
+                  Find More
+                  <img src="./img/Arrow-Right-white.svg" alt="" />
+                </button>
+              </div>
+            </div>
+          </section>
+          <section class="blog">
+            <div class="blog__header">
+              <h4 class="blog__title">Our Blog Posts</h4>
+              <p class="blog__text">
+                We are an online plant shop offering a wide range of cheap and
+                trendy plants.
+              </p>
+            </div>
+            <div class="blog__cards">
+              <article class="blog-card">
+                <div class="blog-card__img">
+                  <img
+                    src="./img/blog-1.jpg"
+                    alt="Cactus & Succulent Care Tips"
+                  />
+                </div>
+                <div class="blog-card__content">
+                  <h4 class="blog-card__sub-title">
+                    <span>September 12</span> <span>Read in 6 minutes</span>
+                  </h4>
+                  <h5 class="blog-card__title">Cactus & Succulent Care Tips</h5>
+                  <p class="blog-card__text">
+                    Cacti are succulents are easy care plants for any home or
+                    patio.
+                  </p>
+                  <a href="#!" class="blog-card__link">
+                    Read More
+                    <svg
+                      width="16"
+                      height="16"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                        fill="#3D3D3D"
+                      />
+                      <path
+                        d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                        fill="#3D3D3D"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </article>
+              <article class="blog-card">
+                <div class="blog-card__img">
+                  <img
+                    src="./img/blog-2.jpg"
+                    alt="Top 10 Succulents for
+                  Your Home"
+                  />
+                </div>
+                <div class="blog-card__content">
+                  <h4 class="blog-card__sub-title">
+                    <span>September 13</span> <span>Read in 2 minutes</span>
+                  </h4>
+                  <h5 class="blog-card__title">
+                    Top 10 Succulents for Your Home
+                  </h5>
+                  <p class="blog-card__text">
+                    Best in hanging baskets. Prefers medium to high light.
+                  </p>
+                  <a href="#!" class="blog-card__link">
+                    Read More
+                    <svg
+                      width="16"
+                      height="16"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                        fill="#3D3D3D"
+                      />
+                      <path
+                        d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                        fill="#3D3D3D"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </article>
+              <article class="blog-card">
+                <div class="blog-card__img">
+                  <img
+                    src="./img/blog-3.jpg"
+                    alt="Cacti & Succulent
+                  Care Tips"
+                  />
+                </div>
+                <div class="blog-card__content">
+                  <h4 class="blog-card__sub-title">
+                    <span>September 15</span> <span>Read in 3 minutes</span>
+                  </h4>
+                  <h5 class="blog-card__title">Cacti & Succulent Care Tips</h5>
+                  <p class="blog-card__text">
+                    Cacti and succulents thrive in containers and because most
+                    are..
+                  </p>
+                  <a href="#!" class="blog-card__link">
+                    Read More
+                    <svg
+                      width="16"
+                      height="16"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                        fill="#3D3D3D"
+                      />
+                      <path
+                        d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                        fill="#3D3D3D"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </article>
+              <article class="blog-card">
+                <div class="blog-card__img">
+                  <img
+                    src="./img/blog-4.jpg"
+                    alt="Best Houseplants
+                  Room by Room"
+                  />
+                </div>
+                <div class="blog-card__content">
+                  <h4 class="blog-card__sub-title">
+                    <span>September 15</span> <span>Read in 2 minutes</span>
+                  </h4>
+                  <h5 class="blog-card__title">
+                    Best Houseplants Room by Room
+                  </h5>
+                  <p class="blog-card__text">
+                    The benefits of houseplants are endless. In addition to..
+                  </p>
+                  <a href="#!" class="blog-card__link">
+                    Read More
+                    <svg
+                      width="16"
+                      height="16"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M2.667 7.817a.5.5 0 0 1 .432-.495l.068-.005h10a.5.5 0 0 1 .068.996l-.068.004h-10a.5.5 0 0 1-.5-.5Z"
+                        fill="#3D3D3D"
+                      />
+                      <path
+                        d="M8.78 4.155a.5.5 0 0 1 .65-.757l.056.049 4.034 4.016a.5.5 0 0 1 .048.652l-.048.056-4.034 4.017a.5.5 0 0 1-.754-.653l.049-.056 3.677-3.662-3.677-3.662Z"
+                        fill="#3D3D3D"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </article>
+            </div>
+          </section>
+        </div>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer container">
+        <div class="footer__top footer-row">
+          <div class="footer-row__left">
+            <div class="footer-row__column">
+              <div class="footer__content">
+                <div class="footer__image footer__image--bg-first"></div>
+                <h4 class="footer__title">Garden Care</h4>
+                <p class="footer__text">
+                  We are an online plant shop offering a wide range of cheap and
+                  trendy plants.
+                </p>
+              </div>
+            </div>
+            <div class="footer-row__column">
+              <div class="footer__content">
+                <div class="footer__image footer__image--bg-second"></div>
+                <h4 class="footer__title">Plant Renovation</h4>
+                <p class="footer__text">
+                  We are an online plant shop offering a wide range of cheap and
+                  trendy plants.
+                </p>
+              </div>
+            </div>
+            <div class="footer-row__column">
+              <div class="footer__content">
+                <div class="footer__image footer__image--bg-third"></div>
+                <h4 class="footer__title">Watering Garden</h4>
+                <p class="footer__text">
+                  We are an online plant shop offering a wide range of cheap and
+                  trendy plants.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="footer-row__right">
+            <div class="footer__newsletter">
+              <h4 class="footer__title">Would you like to join newsletters?</h4>
+              <div class="input-group">
+                <input
+                  type="email"
+                  class="input-group__input"
+                  placeholder="enter your email address..."
+                />
+                <button type="button" class="input-group__btn btn">Join</button>
+              </div>
+              <p class="footer__text">
+                We usually post offers and challenges in newsletter. We’re your
+                online houseplant destination. We offer a wide range of
+                houseplants and accessories shipped directly from our
+                (green)house to yours!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="footer__mid">
+          <a href="#!" class="footer__logo">
+            <img src="./img/Logo.svg" alt="" />
+          </a>
+          <a href="#!" class="footer__link">
+            <span class="material-symbols-rounded"> location_on </span>
+            <span>70 West Buckingham Ave. Farmingdale, NY 11735</span>
+          </a>
+          <a href="mailto:contact@greenshop.com" class="footer__link">
+            <span class="material-symbols-rounded"> mail </span>
+            <span>contact@greenshop.com</span>
+          </a>
+          <a href="tel:+8801911717490" class="footer__link">
+            <span class="material-symbols-rounded"> phone_in_talk </span>
+            <span>+88 01911 717 490</span>
+          </a>
+        </div>
+        <div class="footer__bot footer-row">
+          <div class="footer-row__left">
+            <div class="footer-row__column">
+              <h4 class="footer__title">My Account</h4>
+              <nav class="footer__nav">
+                <a href="#!" class="footer__nav-link">My Account</a>
+                <a href="#!" class="footer__nav-link">Our stores</a>
+                <a href="#!" class="footer__nav-link">Contact us</a>
+                <a href="#!" class="footer__nav-link">Career</a>
+                <a href="#!" class="footer__nav-link">Specials</a>
+              </nav>
+            </div>
+            <div class="footer-row__column">
+              <h4 class="footer__title">Help & Guide</h4>
+              <nav class="footer__nav">
+                <a href="#!" class="footer__nav-link">Help Center</a>
+                <a href="#!" class="footer__nav-link">How to Buy</a>
+                <a href="#!" class="footer__nav-link">Shipping & Delivery</a>
+                <a href="#!" class="footer__nav-link">Product Policy</a>
+                <a href="#!" class="footer__nav-link">How to Return</a>
+              </nav>
+            </div>
+            <div class="footer-row__column">
+              <h4 class="footer__title">Categories</h4>
+              <nav class="footer__nav">
+                <a href="#!" class="footer__nav-link">House Plants</a>
+                <a href="#!" class="footer__nav-link">Potter Plants</a>
+                <a href="#!" class="footer__nav-link">Seeds</a>
+                <a href="#!" class="footer__nav-link">Small Plants</a>
+                <a href="#!" class="footer__nav-link">Accessories</a>
+              </nav>
+            </div>
+          </div>
+          <div class="footer-row__right">
+            <div class="footer__social">
+              <h4 class="footer__title">Social Media</h4>
+              <div class="footer__social-nav">
+                <a href="#!" class="footer__social-link">
+                  <img src="./img/facebook.svg" alt="" />
+                </a>
+                <a href="#!" class="footer__social-link">
+                  <img src="./img/instagram.svg" alt="" />
+                </a>
+                <a href="#!" class="footer__social-link">
+                  <img src="./img/twitter.svg" alt="" />
+                </a>
+                <a href="#!" class="footer__social-link">
+                  <img src="./img/linkidin.svg" alt="" />
+                </a>
+                <a href="#!" class="footer__social-link">
+                  <img src="./img/youtube.svg" alt="" />
+                </a>
+              </div>
+              <h4 class="footer__title">We accept</h4>
+              <div class="footer__bot-image">
+                <img src="./img/banks.jpg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <p class="copyright">&copy; 2021 GreenShop. All Rights Reserved.</p>
+      </footer>
     </div>
   </body>
 </html>
